--- a/web/modules/custom/coe_webform_reports/css/time-tracker.css
+++ b/web/modules/custom/coe_webform_reports/css/time-tracker.css
@@ -1,3 +1,4 @@
-.form-item-completion-time {
-  display: none;
-}
+/*.form-item-completion-time,*/
+/*#edit-google-sheets-url--wrapper {*/
+/*  display: none;*/
+/*}*/
